trunk/Archive2/1e/26165377f14a84/output
main.cpp:7:1: error: static assertion failed: !!
 static_assert( SizeOf<>::value, "!!");
 ^
